--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <title>Web Admin</title>
-    <script src="lib/jquery/dist/jquery.js"></script>
+    <script src="lib/AdminLTE/plugins/jQuery/jQuery-2.1.4.min.js"></script>
+    <!-- jQuery UI 1.11.4 -->
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+    <script>
+    $.widget.bridge('uibutton', $.ui.button);
+    </script>
     <!-- Bootstrap -->
     <link href="lib/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
@@ -21,37 +27,43 @@
        folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="lib/AdminLTE/dist/css/skins/_all-skins.min.css">
     <!-- iCheck -->
-    <link rel="stylesheet" href="lib/iCheck/skins/flat/blue.css">
+    <link rel="stylesheet" href="lib/AdminLTE/plugins/iCheck/flat/blue.css">
     <!-- Morris chart -->
-    <link rel="stylesheet" href="lib/morris.js/morris.css">
+    <link rel="stylesheet" href="lib/AdminLTE/plugins/morris/morris.css">
     <!-- jvectormap -->
-    <link rel="stylesheet" href="lib/jvectormap/jquery-jvectormap.css">
+    <link rel="stylesheet" href="lib/AdminLTE/plugins/jvectormap/jquery-jvectormap-1.2.2.css">
     <!-- Date Picker -->
-    <link rel="stylesheet" href="lib/bootstrap-datepicker/dist/css/bootstrap-datepicker.css">
+    <link rel="stylesheet" href="lib/AdminLTE/plugins/datepicker/datepicker3.css">
     <!-- Daterange picker -->
-    <link rel="stylesheet" href="lib/bootstrap-daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" href="lib/AdminLTE/plugins/daterangepicker/daterangepicker-bs3.css">
     <!-- bootstrap wysihtml5 - text editor -->
-    <link rel="stylesheet" href="lib/bootstrap3-wysihtml5-bower/dist/bootstrap3-wysihtml5.min.css">
+    <link rel="stylesheet" href="lib/AdminLTE/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
     <script src="lib/raphael/raphael-min.js"></script>
-    <script src="lib/morris.js/morris.min.js"></script>
+    <script src="lib/AdminLTE/plugins/morris/morris.min.js"></script>
     <!-- Sparkline -->
-    <!--<script src="lib/jquery.sparkline/jquery.sparkline.min.js"></script>-->
+    <script src="lib/AdminLTE/plugins/sparkline/jquery.sparkline.min.js"></script>
     <!-- jvectormap -->
-    <script src="lib/jvectormap/jquery-jvectormap.js"></script>
+    <script src="lib/AdminLTE/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
     <!--<script src="plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>-->
     <!-- jQuery Knob Chart -->
-    <!--<script src="plugins/knob/jquery.knob.js"></script>-->
+    <script src="lib/AdminLTE/plugins/knob/jquery.knob.js"></script>
     <!-- daterangepicker -->
     <script src="lib/moment/moment.js"></script>
-    <script src="lib/bootstrap-daterangepicker/daterangepicker.js"></script>
+    <script src="lib/AdminLTE/plugins/daterangepicker/daterangepicker.js"></script>
     <!-- datepicker -->
-    <script src="lib/bootstrap-datepicker/dist/js/bootstrap-datepicker.js"></script>
+    <script src="lib/AdminLTE/plugins/datepicker/bootstrap-datepicker.js"></script>
     <!-- Bootstrap WYSIHTML5 -->
-    <script src="lib/bootstrap3-wysihtml5-bower/dist/bootstrap3-wysihtml5.all.min.js"></script>
+    <script src="lib/AdminLTE/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
     <!-- Slimscroll -->
-    <script src="lib/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="lib/AdminLTE/plugins/slimScroll/jquery.slimscroll.min.js"></script>
     <!-- FastClick -->
-    <script src="lib/fastclick/lib/fastclick.js"></script>
+    <script src="lib/AdminLTE/plugins/fastclick/fastclick.js"></script>
+    <!-- AdminLTE App -->
+    <script src="lib/AdminLTE/dist/js/app.min.js"></script>
+    <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+    <script src="lib/AdminLTE/dist/js/pages/dashboard.js"></script>
+    <!-- AdminLTE for demo purposes -->
+    <script src="lib/AdminLTE/dist/js/demo.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
