--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-us" ng-app="app">
   <head>
     <meta charset="UTF-8">
-    <title>Strongloop web admin by Research-New-Technologies</title>
+    <title>Strongloop Web Admin by Research-New-Technologies</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+   
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.js"></script>
+    <script src="app.config.js"></script>
+    <script src="home.controller.js"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
-  <body>
+  <body ng-controller="HomeController">
     <section class="page-header">
-      <h1 class="project-name">Strongloop web admin</h1>
+      <h1 class="project-name">Strongloop Web Admin</h1>
       <h2 class="project-tagline">This is a git repository for strongloop web admin template</h2>
       <a href="https://github.com/Research-New-Technologies/strongloop_web_admin" class="btn">View on GitHub</a>
       <a href="https://github.com/Research-New-Technologies/strongloop_web_admin/zipball/master" class="btn">Download .zip</a>
@@ -20,24 +24,66 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Strongloop Web Admin GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>This is a web page for Strongloop Web Admin template. This template will be used as a base project / starting point of every Strongloop application. We are still working on it to make it perfect.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>How it works</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>If you want to run / try this template in your local machine, please take a look some steps how to install all prerequisites and dependencies.
+ <br><br>
+ <b>Prerequisite</b><br> 
+<ul>
+    <li>Git</li>
+    Please install Git to your machine. Visit this <a href="https://git-scm.com/book/en/v2/Getting-Started-Installing-Git">link</a> to see how to install git.
+    <li>Nodejs</li>
+    Download Nodejs and install it to your machine. Visit this <a href="https://nodejs.org/en/download/">link</a> to download Nodejs based on your environment.
+    <li>Bower</li>
+    Install Bower into your machine with run bellow command: <br>
+    <span class="code">$ npm install bower</span>
+    <li>Strongloop</li>
+    Run the following command in your terminal: <span class="code">$ npm install -g strongloop </span><br>
+    *If your environment is windows, please visit this <a href="https://docs.strongloop.com/display/SL/Installing+on+Windows">link</a> to see step by step how to install Strongloop. Also, add addional command "<span class="code">--unsafe-perm</span>" when install strongloop. (<span class="code">$ npm install -g strongloop --unsafe-perm</span>)
+</ul>
+<br> 
+<b>Troubleshooting</b><br>
 
+If your environment is Windows and found a problem about NPM behind the proxy, please run the following commands:<br>
+<span class="code">$ npm config set registry http://registry.npmjs.org/ </span><br>
+<span class="code">$ npm config set http-proxy http://username:password@ip:port</span> <br>
+<span class="code">$ npm config set https-proxy http://username:password@ip:port</span> <br>
+<span class="code">$ npm set strict-ssl false</span><br><br>
+<b>Run Web Admin in local machine</b><br>
+After all Prerequisite components already installed into your machine, please do below steps until Web Admin application is running in your machine. <br>
+<ol>
+    <li>Clone the strongloop_web_admin repository to your machine.</li>
+    <span class="code">git clone https://github.com/Research-New-Technologies/strongloop_web_admin.git.</span>
+    <li>Change directory into strongloop_web_admin directory.</li>
+    <span class="code">cd strongloop_web_admin</span>
+    <li>Install all dependencies</li>
+    <span class="code">npm install & bower install</span>
+    <li>Run the application</li>
+    <span class="code">node .</span>
+    <li>Visit the Web application</li>
+    Go to http://localhost:3000 to see web admin application or to http://localhost:3000/explorer to see Strongloop API explorer.
+</ol>
+ <br>
+    
+</p>
+
+<h3>
+<a class="anchor" aria-hidden="true"><span class="octicon octicon-link"></span></a>Finished Modules</h3>
+<ol>
+    <li>Register</li>
+    <li>Login</li>
+    <li>Logout</li>
+    <li>Forgot Password</li>
+</ol>
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Currently, There are 2 authors <a href="https://github.com/paulusherdiyatma" class="user-mention">Paulus Herdiyatma</a> and <a href="https://github.com/saintc0d3r">Wendy Sanarwanto</a></p>
 
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
