--- a/client/index.html
+++ b/client/index.html
@@ -60,7 +60,7 @@
     <script src="lib/AdminLTE/plugins/fastclick/fastclick.js"></script>
     <!-- AdminLTE App -->
     <script src="lib/AdminLTE/dist/js/app.min.js"></script>
-
+   
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
     <!--<script src="lib/AdminLTE/dist/js/pages/dashboard.js"></script>-->
     <!-- AdminLTE for demo purposes -->
@@ -78,9 +78,11 @@
     <script src="lib/angular/angular.js"></script>
     <script src="lib/angular-resource/angular-resource.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="lib/angular-animate/angular-animate.js"></script>
     <!--angular route-->
     <script src="lib/angular-route/angular-route.js"></script>
-
+    <link rel='stylesheet' href='lib/angular-loading-bar/build/loading-bar.min.css' type='text/css' media='all' />
+    <script type='text/javascript' src='lib/angular-loading-bar/build/loading-bar.min.js'></script>
 
 </head>
 
