--- a/client/index.html
+++ b/client/index.html
@@ -764,6 +764,7 @@
     <script src="modules/auth/controllers/reset-password.controller.js"></script>
     <script src="modules/auth/controllers/update-account.controller.js"></script>
     <script src="modules/dashboard/controllers/dashboard.controller.js"></script>
+    <script src="modules/dashboard/services/dashboard.service.js"></script>
 </body>
 
 </html>
