add order model

--- a/client/index.html
+++ b/client/index.html
@@ -80,6 +80,8 @@
     <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="lib/angular-animate/angular-animate.js"></script>
     <script src="lib/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="lib/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
+    <script src="lib/angular-tablescroll/angular-tablescroll.js"></script>
     <!--angular route-->
     <script src="lib/angular-route/angular-route.js"></script>
     <link rel='stylesheet' href='lib/angular-loading-bar/build/loading-bar.min.css' type='text/css' media='all' />
@@ -763,6 +765,7 @@
     <script src="modules/auth/controllers/reset-password.controller.js"></script>
     <script src="modules/auth/controllers/update-account.controller.js"></script>
     <script src="modules/dashboard/controllers/dashboard.controller.js"></script>
+    <script src="modules/order/controllers/order.controller.js"></script>
     <script src="modules/dashboard/services/dashboard.service.js"></script>
 </body>
 
