fix bug:sign up proccess

--- a/client/index.html
+++ b/client/index.html
@@ -763,6 +763,7 @@
     <script src="modules/auth/controllers/sign-up.controller.js"></script>
     <script src="modules/auth/controllers/forgot-password.controller.js"></script>
     <script src="modules/auth/controllers/reset-password.controller.js"></script>
+    <script src="modules/auth/controllers/confirmation.controller.js"></script>
     <script src="modules/auth/controllers/update-account.controller.js"></script>
     <script src="modules/dashboard/controllers/dashboard.controller.js"></script>
     <script src="modules/order/controllers/order.controller.js"></script>
