add upload picture web admin

--- a/client/index.html
+++ b/client/index.html
@@ -86,6 +86,7 @@
     <script src="lib/angular-route/angular-route.js"></script>
     <link rel='stylesheet' href='lib/angular-loading-bar/build/loading-bar.min.css' type='text/css' media='all' />
     <script type='text/javascript' src='lib/angular-loading-bar/build/loading-bar.min.js'></script>
+    <script src="lib/angular-base64/angular-base64.js"></script>
 
 </head>
 
