--- a/client/index.html
+++ b/client/index.html
@@ -91,7 +91,7 @@
     <script type='text/javascript' src='lib/angular-loading-bar/build/loading-bar.min.js'></script>
     <script src="lib/angular-base64/angular-base64.js"></script>
     <script src="lib/pdfjs-bower/dist/compatibility.js"></script>
-    
+
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini" ng-app="app" ng-cloak>
@@ -100,15 +100,15 @@
             <!-- Logo -->
             <a href="" class="logo" ng-show="isAdmin">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
-                <span class="logo-mini"><b>C</b>N</span>
+                <span class="logo-mini"><b>{{webAppConfig.initial}}</b></span>
                 <!-- logo for regular state and mobile devices -->
-                <span class="logo-lg"><b>Company</b> Name</span>
+                <span class="logo-lg"><b>{{webAppConfig.webName}}</b></span>
             </a>
             <a href="" class="logo" ng-show="!isAdmin">
                 <!-- mini logo for sidebar mini 50x50 pixels -->
-                <span class="logo-mini"><b>C</b>N</span>
+                <span class="logo-mini"><b>{{webAppConfig.initial}}</b></span>
                 <!-- logo for regular state and mobile devices -->
-                <span class="logo-lg"><b>Company</b> Name</span>
+                <span class="logo-lg"><b>{{webAppConfig.webName}}</b></span>
             </a>
             <!-- Header Navbar: style can be found in header.less -->
             <nav class="navbar navbar-static-top" role="navigation">
@@ -131,7 +131,8 @@
                                 <li class="user-header">
                                     <img ng-src="{{user.profilePicture}}" class="img-circle" alt="User Image">
                                     <p>
-                                        {{user.username}}
+                                        {{user.username}}<br>
+                                         {{user.fullName}}
                                     </p>
                                 </li>
                                 <!-- Menu Body -->
@@ -166,7 +167,7 @@
                         <img ng-src="{{user.profilePicture}}" class="img-circle" alt="User Image">
                     </div>
                     <div class="pull-left info">
-                        <p>{{user.username}}</p>
+                        <p>Hi {{user.fullName}}</p>
                         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
                     </div>
                 </div>
@@ -184,22 +185,26 @@
                 <!-- sidebar menu: : style can be found in sidebar.less -->
                 <ul class="sidebar-menu" ng-controller="MenuController">
                     <li class="header">MAIN NAVIGATION</li>
-                    <li class="active">
+                    <li ng-class="{active: menu.isUserAccount}">
                         <a href="" ng-click="goToUserAccount()">
                             <i class="fa fa-dashboard"></i> <span>User Account</span>
                         </a>
                     </li>
-                    <li>
+                    <li ng-class="{active: menu.isUploadFile}">
                         <a href="" ng-click="goToUpload()">
                             <i class="fa fa-dashboard"></i> <span>Upload File</span>
                         </a>
                     </li>
-                    <li>
+                    <li ng-class="{active: menu.isGenerateReport}">
                         <a href="" ng-click="goToGenerateReport()">
                             <i class="fa fa-dashboard"></i> <span>Generate Report</span>
                         </a>
                     </li>
-
+                    <li ng-class="{active: menu.isCardView}">
+                        <a href="" ng-click="goToCardView()">
+                            <i class="fa fa-dashboard"></i> <span>Card View</span>
+                        </a>
+                    </li>
                 </ul>
             </section>
             <!-- /.sidebar -->
@@ -213,9 +218,9 @@
         <!-- /.content-wrapper -->
         <footer class="main-footer" ng-class="{'footer-full-width': !isAuthenticated}">
             <div class="pull-right hidden-xs">
-                <b>Version</b> 2.3.2
+                <b>Version</b> {{webAppConfig.webVersion}}
             </div>
-            <strong>Copyright &copy; 2014-2015 <a href="http://almsaeedstudio.com">Almsaeed Studio</a>.</strong> All rights
+            <strong>{{webAppConfig.copyright}}</strong> All rights
             reserved.
         </footer>
         <div class="control-sidebar-bg"></div>
@@ -240,6 +245,47 @@
     <script src="modules/menu/controllers/menu.controller.js"></script>
     <script src="modules/generate-report/controllers/generate-report.controller.js"></script>
     <script src="modules/upload-file/controllers/upload-file.controller.js"></script>
+    <script src="modules/common/services/common.service.js"></script>
+
+
+
+    <script type="text/ng-template" id="popup-message.html">
+        <div tabindex="-1" role="dialog">
+            <div class="modal-popup-dialog">
+                <div class="modal-content" align="center">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"></button>
+                        <h4 class="modal-title" align="center">Alert</h4>
+                    </div>
+                    <div class="modal-body">
+                        {{popup.message}}
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" ng-click="closeModal()">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </script>
+<script type="text/ng-template" id="popup-instruction-message.html">
+        <div tabindex="-1" role="dialog">
+            <div class="modal-popup-dialog">
+                <div class="modal-content" align="center">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal"></button>
+                        <h4 class="modal-title" align="center">Instruction</h4>
+                    </div>
+                    <div class="modal-body" align="left">
+                        <pre style="margin:-10px">{{popup.instructionMessage}}</pre>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" ng-click="closeModal()">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </script>
+
 </body>
 
 </html>
